# keyhop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRIVACY_POLICY.md  README.md  RELEASE_PROCESS.md  Scripts.toml  rust-toolchain.toml
.cursor/skills/gitdev/: SKILL.md
.cursor/skills/gitv/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
branding/: README.md
crates/keyhop/: Cargo.toml
crates/keyhop-app/: Cargo.toml
crates/keyhop-app/src/: main.rs
crates/keyhop-core/: Cargo.toml
crates/keyhop-core/src/: backend.rs  lib.rs
crates/keyhop-windows/: Cargo.toml
crates/keyhop-windows/examples/: enumerate_foreground.rs
crates/keyhop-windows/src/: hotkey.rs  lib.rs  overlay.rs
crates/keyhop/src/: main.rs
docs/: CODE_SIGNING.md  MICROSOFT_STORE.md
examples/: enumerate_foreground.rs
src/: action.rs  alphabet_presets.rs  backend.rs  cache.rs  config.rs  hint.rs  lib.rs  main.rs  model.rs
src/windows/: config_watcher.rs  hotkey.rs  ipc.rs  mod.rs  notification.rs  overlay.rs  prewarm.rs  settings_window.rs  single_instance.rs  splash_screen.rs  startup.rs  tray.rs  window_picker.rs
wix/: main.wxs
