[package]
name = "keyhop"
description = "System-wide keyboard navigation overlay: drive your desktop without the mouse."
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
authors = ["Richard Zampieri <br.developer@gmail.com>"]
repository = "https://github.com/rsaz/keyhop"
homepage = "https://github.com/rsaz/keyhop"
documentation = "https://docs.rs/keyhop"
readme = "README.md"
keywords = ["keyboard", "accessibility", "productivity", "automation", "hotkey"]
categories = ["accessibility", "gui", "os"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"], optional = true }

# Windows-only deps. Non-Windows targets compile the lib without these (and
# without the `crate::windows` module), which keeps `cargo check` honest on
# Linux/macOS even before native backends exist.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] }
uiautomation = "0.24"
global-hotkey = "0.7"
tray-icon = "0.22.0"

[features]
default = []
serde = ["dep:serde"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
